syntax = "proto3";

service Authorization {
    rpc NewToken(TokenRequest) returns (TokenResponse) {}
    rpc RefreshToken(TokenRefreshRequest) returns (TokenResponse) {}
    rpc AuthorizeUser(AuthorizationRequest) returns (AuthorizationResponse) {}
}
message TokenRefreshRequest {
    string token = 1;
}
message TokenRequest {
    string guid = 1; 
}
message TokenResponse {
    string token = 1;
    AuthorizationStatusResponse response = 2;
}
message AuthorizationRequest {
    string token = 1;
}

message AuthorizationResponse {
    AuthorizationStatusResponse response = 1;
    string guid = 2;
}
enum AuthorizationStatusResponse {
    OK = 0;
    RENEW = 1;
    TIMEOUT = 2;
    ERROR = 3;
    SERVER_ERROR = 4;
}